--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_KEY=your-anon-key
-GROQ_API_KEY=your-groq-key
-ADMIN_SECRET=change-me-to-something-secure
+SUPABASE_URL=
+SUPABASE_KEY=
+GROQ_API_KEY=
+ADMIN_SECRET=
